# subcast

./: .gitignore  README.md  SPEC.md  VALIDATION.md  pyproject.toml
docs/: manual-test-log.md
src/subcast/: __init__.py  __main__.py  app.py  artwork.py  caster.py  cli.py  config.py  errors.py  library.py  settings.py  source.py  subsearch.py  subtitles.py  transcode.py  webapp.py
src/subcast/web/: index.html
src/vidstreamer/: __init__.py  __main__.py  app.py  artwork.py  caster.py  cli.py  compat.py  config.py  discovery.py  errors.py  library.py  netutil.py  probe.py  server.py  settings.py  subsearch.py  subtitles.py  transcode.py  webapp.py
src/vidstreamer/web/: index.html
tests/: conftest.py  fakes.py  test_p0_cli.py  test_p10_webapp_subs.py  test_p11_library.py  test_p12_artwork.py  test_p1_probe.py  test_p2_compat.py  test_p3_subtitles.py  test_p4_server.py  test_p5_control.py  test_p6_e2e.py  test_p7_sub_offset.py  test_p8_settings.py  test_p9_subsearch.py
tools/icon/: README.md  generate_icon.py  strip_bg.py
tools/screenshot/: README.md  package-lock.json  package.json  shoot.mjs
