[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidstreamer"
version = "0.1.0"
description = "Cast local or web video to a Chromecast Ultra with subtitle support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vidstreamer" }]
dependencies = [
    # Ubuntu 22.04 ships Python 3.10; PyChromecast 14 needs 3.11+, so 13.x is the
    # floor that supports our own platform target. The subtitle/load API we use
    # is present in 13.x.
    "PyChromecast>=13,<15",
    "aiohttp>=3.9",
    "click>=8.1",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
vidstreamer = "vidstreamer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
